# cowrie

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
android/: README.md  twa-manifest.json
cusdc/: deploy-local.sh  foundry.toml
cusdc/script/: Deploy.s.sol
cusdc/src/: CNGN.sol  CUSDC.sol  CowrieBridge.sol  CowrieTreasury.sol
cusdc/test/: Cowrie.t.sol
docs/: TRACEABILITY.md
docs/uml/: cowrie_class.puml  cowrie_deployment.puml  cowrie_sequence.puml  cowrie_state.puml  cowrie_usecase.puml
orchestration/: Dockerfile  pyproject.toml  railway.json  requirements.txt
orchestration/cowrie/: __init__.py  config.py  db.py  enums.py  main.py  models.py  security.py  seed.py  telemetry.py
orchestration/cowrie/adapters/: __init__.py  banking_partner.py  chain.py  daraja.py  mono.py  smileid.py
orchestration/cowrie/middleware/: __init__.py  ratelimit.py  timing.py
orchestration/cowrie/routers/: __init__.py  admin.py  auth.py  demo.py  deps.py  kyc.py  partner.py  regulator.py  support.py  transfers.py  transparency.py  ws.py
orchestration/cowrie/services/: __init__.py  audit.py  cache.py  kyc_service.py  monitoring.py  notifications.py  otp.py  quote_engine.py  reserve_service.py  sanctions.py  transfer_service.py  webhooks.py
orchestration/tests/: conftest.py  test_requirements.py
surfaces/: Dockerfile  next.config.ts  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.tsbuildinfo
surfaces/app/: globals.css  layout.tsx  page.tsx
surfaces/components/: brand.tsx  get-app.tsx  ui.tsx  (+1 more)
(+41 files in other folders)
